--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/packages.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Dapper" version="1.50.4" targetFramework="net461" />
+  <package id="Grid.Mvc" version="3.1.0-ci1036" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
