--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Web.config
@@ -55,10 +55,12 @@
     <remove name="BD_CtasPorCobrarConnection" />
     <remove name="BD_CtasPorCobrarConnection" />
     <remove name="BD_RepositorioConnection" />
+    <remove name="BD_TemporalPagoConnection" />
 
     <add name="BD_CtasPorCobrarConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_CtasPorCobrar;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_MigracionTPConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_MigracionTP;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     <add name="BD_RepositorioConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_UNFV_Repositorio;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
+    <add name="BD_TemporalPagoConnection" connectionString="data source=.\SQL_2016E;initial catalog=BD_OCEF_TemporalPagos;user id=UserOCEF;password=123@abc;MultipleActiveResultSets=True;App=WebMigradorCtasPorCobrar;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <system.codedom>
