--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/packages.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/packages.config
@@ -8,12 +8,15 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.es" version="5.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor.es" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor.es" version="3.2.9" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization.es" version="1.1.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebPages.es" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.es" version="3.2.9" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.9" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
