--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -128,11 +128,6 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Areas\Migracion\Controllers\CuotaPagoController.cs" />
-    <Compile Include="Areas\Migracion\Controllers\EstudianteController.cs" />
-    <Compile Include="Areas\Migracion\MigracionAreaRegistration.cs" />
-    <Compile Include="Areas\temporal_pagos\Controllers\EstudianteController.cs" />
-    <Compile Include="Areas\temporal_pagos\temporal_pagosAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CajaPerifericaController.cs" />
     <Compile Include="Controllers\ConceptoPagoController.cs" />
@@ -412,20 +407,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Migracion\Models\" />
-    <Folder Include="Areas\Migracion\Views\CuotaPago\" />
-    <Folder Include="Areas\Migracion\Views\Estudiante\" />
-    <Folder Include="Areas\Migracion\Views\Shared\" />
-    <Folder Include="Areas\temporal_pagos\Models\" />
-    <Folder Include="Areas\temporal_pagos\Views\Estudiante\" />
-    <Folder Include="Areas\temporal_pagos\Views\Shared\" />
     <Folder Include="Views\CajaPeriferica\" />
     <Folder Include="Views\Migracion\" />
     <Folder Include="Views\Tasas\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Areas\Migracion\Views\web.config" />
-    <Content Include="Areas\temporal_pagos\Views\web.config" />
     <Content Include="Files\Help\ManualUsuario.pdf" />
     <None Include="packages.config" />
     <Content Include="Views\Repositorio\Estudiante_migracion_step1.cshtml" />
@@ -462,6 +448,9 @@
     <Content Include="Views\ConceptoPago\Pregrado.cshtml" />
     <Content Include="Views\Help\Index.cshtml" />
     <Content Include="Views\Help\Manual.cshtml" />
+    <Content Include="Views\CuotaPago\_TemporalPago.cshtml" />
+    <Content Include="Views\CuotaPago\_DatosMigracion.cshtml" />
+    <Content Include="Views\CuotaPago\_ProcesoMigracion.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
