--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/packages.config
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="ClosedXML" version="0.96.0" targetFramework="net461" />
   <package id="Dapper" version="1.50.4" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net461" />
   <package id="Grid.Mvc" version="3.1.0-ci1036" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
@@ -18,6 +21,7 @@
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.9" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.9" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
