--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar.csproj
@@ -157,6 +157,9 @@
     <Compile Include="Models\Entities\Config\User.cs" />
     <Compile Include="Models\Entities\CtasPorCobrar\TC_CatalogoOpcion.cs" />
     <Compile Include="Models\Entities\CtasPorCobrar\TC_CategoriaPago.cs" />
+    <Compile Include="Models\Entities\CtasPorCobrar\TC_Concepto.cs" />
+    <Compile Include="Models\Entities\CtasPorCobrar\TI_ConceptoCategoriaPago.cs" />
+    <Compile Include="Models\Entities\CtasPorCobrar\TI_ConceptoPago.cs" />
     <Compile Include="Models\Entities\CtasPorCobrar\VW_CarreraProfesional.cs" />
     <Compile Include="Models\Entities\Migracion\DatosResultados.cs" />
     <Compile Include="Models\Entities\Migracion\DetalleObligacion.cs" />
@@ -171,6 +174,8 @@
     <Compile Include="Models\Repository\CtasPorCobrar\CatalogoOpcionRepository.cs" />
     <Compile Include="Models\Repository\CtasPorCobrar\CarreraProfesionalRepository.cs" />
     <Compile Include="Models\Repository\CtasPorCobrar\CategoriaPagoRepository.cs" />
+    <Compile Include="Models\Repository\CtasPorCobrar\ConceptoPagoRepository.cs" />
+    <Compile Include="Models\Repository\CtasPorCobrar\ProcesoRepositoty.cs" />
     <Compile Include="Models\Repository\Migracion\AlumnoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\ConceptoPagoRepository.cs" />
     <Compile Include="Models\Repository\Migracion\Configuracion.cs" />
@@ -205,6 +210,7 @@
     <Compile Include="Models\Services\TemporalPagos\AlumnoService.cs" />
     <Compile Include="Models\Services\TemporalPagos\ObligacionService.cs" />
     <Compile Include="Models\ViewModels\LoginViewModel.cs" />
+    <Compile Include="Models\ViewModels\ObligacionAlumnoViewModel.cs" />
     <Compile Include="Models\ViewModels\ResponseViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
